Python for Data Science for Dummies: Chapter 3: Adding notebook content

--- a/Python-for-Data-Science-for-Dummies/P4DS4D3/P4DS4D3_Sample.ipynb
+++ b/Python-for-Data-Science-for-Dummies/P4DS4D3/P4DS4D3_Sample.ipynb
@@ -1,9 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "34f44e97",
+   "metadata": {},
+   "source": [
+    "# Downloading the Datasets and Example Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f17f22",
+   "metadata": {},
+   "source": [
+    "## Defining the code repository"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9805dca0",
+   "metadata": {},
+   "source": [
+    "### Adding notebook content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "efdfa0ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python is really cool!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Python is really cool!\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "045d5160",
+   "id": "e35582c6",
    "metadata": {},
    "outputs": [],
    "source": []
