Python for Data Science for Dummies: Chapter 3: Importing a notebook

--- a/Python-for-Data-Science-for-Dummies/P4DS4D3/P4DS4D3_01_Quick_Overview.ipynb
+++ b/Python-for-Data-Science-for-Dummies/P4DS4D3/P4DS4D3_01_Quick_Overview.ipynb
@@ -4,72 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with Anaconda"
+    "# Learning to Use Python Fast"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Jupyter Notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python Version:\n",
-      " 3.10.9 | packaged by Anaconda, Inc. | (main, Mar  1 2023, 18:18:15) [MSC v.1916 64 bit (AMD64)]\n",
-      "\n",
-      "Anaconda Version:\n",
-      " conda 23.1.0\n",
-      "\n",
-      "\n",
-      "Jupyter Notebook Version:\n",
-      " # packages in environment at C:\\Users\\John\\anaconda3:\n",
-      "#\n",
-      "# Name                    Version                   Build  Channel\n",
-      "notebook                  6.5.2           py310haa95532_0  \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print('Python Version:\\n', sys.version)\n",
-    "\n",
-    "import os\n",
-    "result = os.popen('conda --version').read()\n",
-    "print('\\nAnaconda Version:\\n', result)\n",
-    "\n",
-    "result = os.popen('conda list notebook$').read()\n",
-    "print('\\nJupyter Notebook Version:\\n', result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Downloading the Datasets and Example Code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Defining the code repository"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Adding notebook content"
+    "## Loading data"
    ]
   },
   {
@@ -81,12 +23,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python is really cool!\n"
+      "The size of the data set is (20640, 8)\n",
+      "The names of the data columns are {} ['MedInc', 'HouseAge', 'AveRooms', 'AveBedrms', 'Population', 'AveOccup', 'Latitude', 'Longitude']\n"
      ]
     }
    ],
    "source": [
-    "print('Python is really cool!')"
+    "from sklearn.datasets import fetch_california_housing\n",
+    "housing = fetch_california_housing()\n",
+    "X, y = housing.data,housing.target\n",
+    "print(\"The size of the data set is {}\".format(X.shape))\n",
+    "print(\"The names of the data columns are {}\", housing.feature_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training a model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "hypothesis = LinearRegression()\n",
+    "hypothesis.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Viewing a result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4.36693293e-01  9.43577803e-03 -1.07322041e-01  6.45065694e-01\n",
+      " -3.97638942e-06 -3.78654265e-03 -4.21314378e-01 -4.34513755e-01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hypothesis.coef_)"
    ]
   },
   {
@@ -113,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
